Closed
Bug 643669
Opened 15 years ago
Closed 15 years ago
TI: Crash [@ js::mjit::JaegerShot] or "Assertion failure: Call site vanished.,"
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: gkw, Unassigned)
References
Details
(Keywords: assertion, crash, testcase)
Crash Data
Attachments
(1 file)
|
6.87 KB,
text/plain
|
Details |
(function () {
eval("gc().l()")
})()
crashes js opt shell on JM changeset 55f463c562d4 with -m, -a and -n at js::mjit::JaegerShot and asserts js debug shell at Assertion failure: Call site vanished.
| Reporter | ||
Comment 1•15 years ago
|
||
Comment 2•15 years ago
|
||
If compiling CALLPROP goes through jsop_callprop_str, it emits the stub/IC for a GETPROP which need to be accounted for when emitting rejoin paths.
http://hg.mozilla.org/projects/jaegermonkey/rev/06a0ec7e3deb
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Crash Signature: [@ js::mjit::JaegerShot]
Comment 3•13 years ago
|
||
A testcase for this bug was automatically identified at js/src/jit-test/tests/jaeger/recompile/bug643669.js.
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•