[INFER] Rejoin during CALLPROP if either compilation did a GETPROP for string accesses, bug 643669.